Use `toList` in stream chains
Signed-off-by: TheMode <themode@outlook.fr>